Bug 1954493 - Make DPR use the correct zoom in RFP. r=fkilic

Also, refactor nsRFPService::GetDevicePixelRatioAtZoom to make it
easier to understand what the intermediate results are.

Differential Revision: https://phabricator.services.mozilla.com/D241962